fix login and logout

--- a/public_html/personal.html
+++ b/public_html/personal.html
@@ -36,7 +36,7 @@
             <a class="link-connections mdl-navigation__link">Connections</a>
             <a class="link-change mdl-navigation__link ">Change Password</a>
             <a class="link-organizations mdl-navigation__link ">Organization</a>
-            <a class="logout-btn mdl-navigation__link" href="/logout">Logout</a>
+            <a class="logout-btn mdl-navigation__link">Logout</a>
           </nav>
         </div>
         <main class="mdl-layout__content">
