--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,12 +4,11 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
+    <meta name="description" content="A spam free mail system.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>Notifier</title>
 
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
+    <link rel="stylesheet" href="./material.min.css">
   </head>
 
   <body>
@@ -105,6 +104,7 @@
         </div>
       </div>
     </div>
+    <script src="./material.min.js" charset="utf-8"></script>
     <script src="./index.js" charset="utf-8"></script>
     <!-- </script> -->
   </body>
