--- a/public_html/personal.html
+++ b/public_html/personal.html
@@ -21,8 +21,7 @@
     <meta name="msapplication-TileColor" content="#3372DF">
 
     <link rel="shortcut icon" href="logo.png">
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
+    <link rel="stylesheet" href="./material.min.css">
   </head>
 
   <body>
@@ -99,6 +98,7 @@
         </div>
       </div>
       <script src="./personal.js" charset="utf-8"></script>
+      <script src="./material.min.js" charset="utf-8"></script>
   </body>
 
 </html>
