--- a/public_html/pass-reset.html
+++ b/public_html/pass-reset.html
@@ -72,7 +72,7 @@
         }).done(function (data) {
           if($.trim(data) === '1') {
             alert('Password changed successffully');
-            location.href='/client/public_html/index.html';
+            location.href='./index.html';
           } else if($.trim(data) === '0'){
             alert('Something Went Wrong');
           } else {
