--- a/public_html/personal.html
+++ b/public_html/personal.html
@@ -56,7 +56,7 @@
             </div>
             <div class="organizations-container">
               <div class="create-new-organization">
-                <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent add-new-group" href="/org-signup.html">
+                <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent add-new-group" href="./org-signup.php">
                   Create New Organization
                 </a>
               </div>
