add jquery cdn in pass-reset.html and delete self hosted file

--- a/public_html/pass-reset.html
+++ b/public_html/pass-reset.html
@@ -8,8 +8,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <title>Notifier - Password Reset</title>
 
-  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> -->
   <link rel="stylesheet" href="./material.min.css">
   <style media="screen">
     body {
@@ -55,7 +53,11 @@
     </div>
   </div>
   <script src="./material.min.js"></script>
-  <script src="./jquery.min.js"></script>
+  <!-- <script src="./jquery.min.js"></script> -->
+  <script
+  src="https://code.jquery.com/jquery-3.1.1.min.js"
+  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+  crossorigin="anonymous"></script>
   <script type="text/javascript">
     var $passResetContainer = $(".password-reset-container");
     $passResetContainer.find(".pass-reset-submit").click(function (e) {
