--- a/public_html/index.html
+++ b/public_html/index.html
@@ -104,6 +104,11 @@
         </div>
       </div>
     </div>
+    <script
+    src="https://code.jquery.com/jquery-3.1.1.min.js"
+    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+    crossorigin="anonymous">
+    </script>
     <script src="./material.min.js" charset="utf-8"></script>
     <script src="./index.js" charset="utf-8"></script>
     <!-- </script> -->
