--- a/public_html/personal.html
+++ b/public_html/personal.html
@@ -22,6 +22,7 @@
 
     <link rel="shortcut icon" href="logo.png">
     <link rel="stylesheet" href="./material.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
 
   <body>
@@ -97,8 +98,13 @@
 
         </div>
       </div>
-      <script src="./personal.js" charset="utf-8"></script>
+      <script
+        src="https://code.jquery.com/jquery-3.1.1.min.js"
+        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+        crossorigin="anonymous">
+      </script>
       <script src="./material.min.js" charset="utf-8"></script>
+      <script src="./personal.js" charset="utf-8"></script>
   </body>
 
 </html>
