add google fonts link fix #2

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,6 +9,7 @@
     <title>Notifier</title>
 
     <link rel="stylesheet" href="./material.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
 
   <body>
