--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="./material.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="shortcut icon" href="logo.png">
   </head>
 
   <body>
