add loaders in index.html

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -32,6 +32,7 @@
               <input class="mdl-textfield__input" type="password" id="password">
               <label class="mdl-textfield__label" for="password">Password</label>
             </div>
+            <div class="mdl-progress mdl-js-progress mdl-progress__indeterminate" style="display: none"></div>
           </div>
           <div class="login-submit">
             <a class="mdl-button mdl-button--colored mdl-js-button mdl-button--raised mdl-js-ripple-effect">Login</a>
@@ -70,6 +71,7 @@
                 <label class="mdl-textfield__label" for="email">Email ID for verification</label>
                 <span class="mdl-textfield__error">Invalid Email ID</span>
               </div>
+              <div class="mdl-progress mdl-js-progress mdl-progress__indeterminate" style="display: none"></div>
             </form>
           </div>
           <div class="signup-submit">
@@ -96,6 +98,7 @@
               <label class="mdl-textfield__label" for="email">Email</label>
               <span class="mdl-textfield__error">E-mail id not found.</span>
             </div>
+            <div class="mdl-progress mdl-js-progress mdl-progress__indeterminate" style="display: none"></div>
           </div>
           <div class="forgot-password-submit-btn-container">
             <a class="mdl-button mdl-button--colored mdl-js-button mdl-button--raised mdl-js-ripple-effect forgot-password-submit-btn">Submit</a>
