add loading state indicator in personal

--- a/public_html/personal.html
+++ b/public_html/personal.html
@@ -88,6 +88,7 @@
                     <input class="mdl-textfield__input" type="password" id="confirm-new-password">
                     <label class="mdl-textfield__label" for="confirm-new-password">Confirm New Password</label>
                   </div>
+                  <div class="mdl-progress mdl-js-progress mdl-progress__indeterminate" style="display: none"></div>
                 </div>
                 <div class="login-submit">
                   <a class="mdl-button mdl-button--colored mdl-js-button mdl-button--raised mdl-js-ripple-effect">Save</a>
