--- a/public_html/pass-reset.html
+++ b/public_html/pass-reset.html
@@ -47,6 +47,7 @@
           <label class="mdl-textfield__label" for="confirm-password">Confirm Password</label>
           <span class="mdl-textfield__error">Passwords Does not match</span>
         </div>
+        <div class="mdl-progress mdl-js-progress mdl-progress__indeterminate" style="display: none"></div>
       </div>
       <div class="pass-reset-submit">
         <a class="mdl-button mdl-button--colored mdl-js-button mdl-button--raised mdl-js-ripple-effect">Save</a>
@@ -65,7 +66,9 @@
       e.preventDefault();
       var newPassword = $passResetContainer.find('#new-password').val();
       var confirmPassword = $passResetContainer.find('#confirm-password').val();
+      let $progressBar = $passResetContainer.find('.mdl-progress');
       if(newPassword === confirmPassword) {
+        $progressBar.show();
         $.ajax({
           type: 'POST',
           url: '/server/forgot_password/forgot_password_recover.php',
@@ -73,6 +76,7 @@
             newpassword: newPassword
           }
         }).done(function (data) {
+          $progressBar.hide();
           if($.trim(data) === '1') {
             alert('Password changed successffully');
             location.href='./index.html';
