--- a/public_html/personal.html
+++ b/public_html/personal.html
@@ -20,13 +20,121 @@
     <meta name="msapplication-TileImage" content="notifierlogo.png">
     <meta name="msapplication-TileColor" content="#3372DF">
 
-    <link rel="shortcut icon" href="logo.png">
-    <link rel="stylesheet" href="./material.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
 
   <body>
-    <div class="personal-app-container">
+    <div class="loader-container">
+      <svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+        <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
+      </svg>
+    </div>
+    <style>
+      .loader-container {
+        margin: 0;
+        height: 100vh;
+        width: 100vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .loader-container .spinner {
+        -webkit-animation: rotator 1.4s linear infinite;
+        animation: rotator 1.4s linear infinite;
+      }
+
+      @-webkit-keyframes rotator {
+        0% {
+          -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
+        }
+        100% {
+          -webkit-transform: rotate(270deg);
+          transform: rotate(270deg);
+        }
+      }
+
+      @keyframes rotator {
+        0% {
+          -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
+        }
+        100% {
+          -webkit-transform: rotate(270deg);
+          transform: rotate(270deg);
+        }
+      }
+
+      .loader-container .path {
+        stroke-dasharray: 187;
+        stroke-dashoffset: 0;
+        -webkit-transform-origin: center;
+        transform-origin: center;
+        -webkit-animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+        animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+      }
+
+      @-webkit-keyframes colors {
+        0% {
+          stroke: #3f51b5;
+        }
+        100% {
+          stroke: #4285F4;
+        }
+      }
+
+      @keyframes colors {
+        0% {
+          stroke: #3f51b5;
+        }
+        100% {
+          stroke: #4285F4;
+        }
+      }
+
+      @-webkit-keyframes dash {
+        0% {
+          stroke-dashoffset: 187;
+        }
+        50% {
+          stroke-dashoffset: 46.75;
+          -webkit-transform: rotate(135deg);
+          transform: rotate(135deg);
+        }
+        100% {
+          stroke-dashoffset: 187;
+          -webkit-transform: rotate(450deg);
+          transform: rotate(450deg);
+        }
+      }
+
+      @keyframes dash {
+        0% {
+          stroke-dashoffset: 187;
+        }
+        50% {
+          stroke-dashoffset: 46.75;
+          -webkit-transform: rotate(135deg);
+          transform: rotate(135deg);
+        }
+        100% {
+          stroke-dashoffset: 187;
+          -webkit-transform: rotate(450deg);
+          transform: rotate(450deg);
+        }
+      }
+    </style>
+    <script type="text/javascript">
+      let bodySelector = document.getElementsByTagName('body')[0];
+      let loaderSelector = document.querySelector('.loader-container');
+      window.onload = function() {
+        console.log('window has loaded')
+        let personalAppContainer = document.querySelector('.personal-app-container');
+        console.log(personalAppContainer);
+        personalAppContainer.style.display = 'block';
+        loaderSelector.style.display = 'none';
+      }
+    </script>
+    <div class="personal-app-container" style="display: none">
       <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
         <header class="mdl-layout__header"></header>
         <div class="mdl-layout__drawer">
@@ -99,6 +207,9 @@
 
         </div>
       </div>
+      <link rel="shortcut icon" href="logo.png">
+      <link rel="stylesheet" href="./material.min.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
       <script
         src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
