add link to new-push.html in navigation

--- a/public_html/personal.html
+++ b/public_html/personal.html
@@ -143,6 +143,7 @@
             <a class="link-inbox mdl-navigation__link active">Inbox</a>
             <a class="link-connections mdl-navigation__link">Connections</a>
             <a class="link-change mdl-navigation__link ">Change Password</a>
+            <a class="mdl-navigation__link" href="./new-push.html">Notifications</a>
             <a class="link-organizations mdl-navigation__link ">Organization</a>
             <a class="logout-btn mdl-navigation__link">Logout</a>
           </nav>
