change redirect link on successfull sign up

--- a/public_html/personal_otp_validation.html
+++ b/public_html/personal_otp_validation.html
@@ -82,7 +82,7 @@
           if($.trim(data) === '1') {
             alert('Account created Successfully');
 
-            location.href='../push.html';
+            location.href='./personal.php';
           } else if($.trim(data) === '0'){
             alert('Something Went Wrong');
           } else {
